--- a/Data Partition.ipynb
+++ b/Data Partition.ipynb
@@ -199,7 +199,89 @@
      "output_type": "stream",
      "text": [
       "2024-12-02 22:51:41,623 WARN spark.HeartbeatReceiver: Removing executor driver with no recent heartbeats: 130999 ms exceeds timeout 120000 ms\n",
-      "2024-12-02 22:51:45,465 WARN spark.SparkContext: Killing executors is not supported by current scheduler.\n"
+      "2024-12-02 22:51:45,465 WARN spark.SparkContext: Killing executors is not supported by current scheduler.\n",
+      "2024-12-06 19:23:31,126 ERROR bonecp.BoneCP: Failed to acquire connection to jdbc:mysql://localhost:3306/hive?createDatabaseIfNotExist=true&useSSL=false. Sleeping for 7000 ms. Attempts left: 5\n",
+      "com.mysql.jdbc.exceptions.jdbc4.CommunicationsException: Communications link failure\n",
+      "\n",
+      "The last packet successfully received from the server was 1,331,848 milliseconds ago.  The last packet sent successfully to the server was 1,318,581 milliseconds ago.\n",
+      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
+      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
+      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
+      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
+      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
+      "\tat com.mysql.jdbc.SQLError.createCommunicationsException(SQLError.java:990)\n",
+      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3562)\n",
+      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3462)\n",
+      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:3905)\n",
+      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:871)\n",
+      "\tat com.mysql.jdbc.MysqlIO.proceedHandshakeWithPluggableAuthentication(MysqlIO.java:1714)\n",
+      "\tat com.mysql.jdbc.MysqlIO.doHandshake(MysqlIO.java:1224)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.coreConnect(ConnectionImpl.java:2199)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.connectOneTryOnly(ConnectionImpl.java:2230)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.createNewIO(ConnectionImpl.java:2025)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.<init>(ConnectionImpl.java:778)\n",
+      "\tat com.mysql.jdbc.JDBC4Connection.<init>(JDBC4Connection.java:47)\n",
+      "\tat sun.reflect.GeneratedConstructorAccessor133.newInstance(Unknown Source)\n",
+      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
+      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
+      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.getInstance(ConnectionImpl.java:386)\n",
+      "\tat com.mysql.jdbc.NonRegisteringDriver.connect(NonRegisteringDriver.java:330)\n",
+      "\tat java.sql.DriverManager.getConnection(DriverManager.java:664)\n",
+      "\tat java.sql.DriverManager.getConnection(DriverManager.java:208)\n",
+      "\tat com.jolbox.bonecp.BoneCP.obtainRawInternalConnection(BoneCP.java:361)\n",
+      "\tat com.jolbox.bonecp.BoneCP.obtainInternalConnection(BoneCP.java:269)\n",
+      "\tat com.jolbox.bonecp.ConnectionHandle.<init>(ConnectionHandle.java:242)\n",
+      "\tat com.jolbox.bonecp.PoolWatchThread.fillConnections(PoolWatchThread.java:115)\n",
+      "\tat com.jolbox.bonecp.PoolWatchThread.run(PoolWatchThread.java:82)\n",
+      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
+      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
+      "\tat java.lang.Thread.run(Thread.java:748)\n",
+      "Caused by: java.io.EOFException: Can not read response from server. Expected to read 4 bytes, read 0 bytes before connection was unexpectedly lost.\n",
+      "\tat com.mysql.jdbc.MysqlIO.readFully(MysqlIO.java:3014)\n",
+      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3472)\n",
+      "\t... 26 more\n",
+      "2024-12-06 19:23:31,126 ERROR bonecp.BoneCP: Failed to acquire connection to jdbc:mysql://localhost:3306/hive?createDatabaseIfNotExist=true&useSSL=false. Sleeping for 7000 ms. Attempts left: 5\n",
+      "com.mysql.jdbc.exceptions.jdbc4.CommunicationsException: Communications link failure\n",
+      "\n",
+      "The last packet successfully received from the server was 1,331,848 milliseconds ago.  The last packet sent successfully to the server was 1,318,266 milliseconds ago.\n",
+      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
+      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
+      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
+      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
+      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
+      "\tat com.mysql.jdbc.SQLError.createCommunicationsException(SQLError.java:990)\n",
+      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3562)\n",
+      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3462)\n",
+      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:3905)\n",
+      "\tat com.mysql.jdbc.MysqlIO.checkErrorPacket(MysqlIO.java:871)\n",
+      "\tat com.mysql.jdbc.MysqlIO.proceedHandshakeWithPluggableAuthentication(MysqlIO.java:1714)\n",
+      "\tat com.mysql.jdbc.MysqlIO.doHandshake(MysqlIO.java:1224)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.coreConnect(ConnectionImpl.java:2199)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.connectOneTryOnly(ConnectionImpl.java:2230)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.createNewIO(ConnectionImpl.java:2025)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.<init>(ConnectionImpl.java:778)\n",
+      "\tat com.mysql.jdbc.JDBC4Connection.<init>(JDBC4Connection.java:47)\n",
+      "\tat sun.reflect.GeneratedConstructorAccessor133.newInstance(Unknown Source)\n",
+      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
+      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
+      "\tat com.mysql.jdbc.Util.handleNewInstance(Util.java:425)\n",
+      "\tat com.mysql.jdbc.ConnectionImpl.getInstance(ConnectionImpl.java:386)\n",
+      "\tat com.mysql.jdbc.NonRegisteringDriver.connect(NonRegisteringDriver.java:330)\n",
+      "\tat java.sql.DriverManager.getConnection(DriverManager.java:664)\n",
+      "\tat java.sql.DriverManager.getConnection(DriverManager.java:208)\n",
+      "\tat com.jolbox.bonecp.BoneCP.obtainRawInternalConnection(BoneCP.java:361)\n",
+      "\tat com.jolbox.bonecp.BoneCP.obtainInternalConnection(BoneCP.java:269)\n",
+      "\tat com.jolbox.bonecp.ConnectionHandle.<init>(ConnectionHandle.java:242)\n",
+      "\tat com.jolbox.bonecp.PoolWatchThread.fillConnections(PoolWatchThread.java:115)\n",
+      "\tat com.jolbox.bonecp.PoolWatchThread.run(PoolWatchThread.java:82)\n",
+      "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
+      "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
+      "\tat java.lang.Thread.run(Thread.java:748)\n",
+      "Caused by: java.io.EOFException: Can not read response from server. Expected to read 4 bytes, read 0 bytes before connection was unexpectedly lost.\n",
+      "\tat com.mysql.jdbc.MysqlIO.readFully(MysqlIO.java:3014)\n",
+      "\tat com.mysql.jdbc.MysqlIO.reuseAndReadPacket(MysqlIO.java:3472)\n",
+      "\t... 26 more\n"
      ]
     }
    ],
